# reinforcement-learning

./: README.md
gazebo/virtual_sereal/: CMakeLists.txt  package.xml
gazebo/virtual_sereal/launch/: robot_state_publisher.launch.py  sereal_empty.launch.py  spawn_sereal.launch.py
gazebo/virtual_sereal/meshes/: camera_link.STL  right_link.STL
gazebo/virtual_sereal/models/sereal/: model-1_4.sdf  model-1_4_backup1202  model.sdf  model_backup.config
gazebo/virtual_sereal/scripts/: gazebo_reset.py  imu_listener_node.py  robot_standup.py  set_model_state.py  set_roll.py  twist_subscriber.py
gazebo/virtual_sereal/urdf/: sereal.urdf  sereal_backup.urdf
gazebo/virtual_sereal/worlds/: empty_world.world
virtual_sereal/launch/: spawn_sereal.launch.py
virtual_sereal/meshes/: left_link.STL
virtual_sereal/models/rail_system/: model.config  model.sdf
virtual_sereal/models/sereal/: model.sdf
virtual_sereal/scripts/: cmd_test.py  rlcode.py  velocity_command_node.py  z_wheel_check.py
virtual_sereal/urdf/: test1126.urdf
virtual_sereal/worlds/: empty_world.world
virtual_sereal/worlds/rail/: model.config  model.sdf
