<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>virtual_sereal</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dh@todo.todo">dh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch</build_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <buildtool_depend>python3</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>
  <exec_depend>ament_cmake_python</exec_depend>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <build_depend>gazebo_ros_pkgs</build_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>


  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

    <!-- IMU 메시지를 사용하는 경우 -->
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- tf_transformations를 사용하는 경우 -->
  <exec_depend>tf_transformations</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
